// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders repositories correctly 1`] = `
<ReactPlaceholder
  color="#CDCDCD"
  customPlaceholder={
    <div
      className="repos"
      style={
        Object {
          "width": "30em",
        }
      }
    >
      <TextBlock
        color="grey"
        rows={5}
        widths={
          Array [
            97,
            100,
            94,
            90,
            98,
            95,
            98,
            40,
          ]
        }
      />
    </div>
  }
  delay={0}
  ready={true}
  type="text"
>
  <div
    className="repos"
    style={Object {}}
  >
    <RepositoryComponent
      commits={
        Array [
          Object {
            "abbreviatedOid": "3ce6669",
            "author": Object {
              "avatarUrl": "https://avatars2.githubusercontent.com/u/6482205?v=4",
              "name": "Jan Gerhard Schoepp",
            },
            "committedDate": "2018-05-04T19:59:54Z",
            "message": "Update README.md",
            "url": "https://github.com/jangerhard/react-github-showcase/commit/3ce6669da1f699e254a4aaccd5964863915547a0",
          },
          Object {
            "abbreviatedOid": "0106258",
            "author": Object {
              "avatarUrl": "https://avatars2.githubusercontent.com/u/6482205?v=4",
              "name": "jangerhard",
            },
            "committedDate": "2018-05-04T17:40:37Z",
            "message": "0.0.14",
            "url": "https://github.com/jangerhard/react-github-showcase/commit/01062589e243a9044b04c49f86775937af273fe8",
          },
        ]
      }
      name="react-github-showcase"
      url="https://github.com/jangerhard/react-github-showcase"
    />
    <RepositoryComponent
      commits={
        Array [
          Object {
            "abbreviatedOid": "66aea85",
            "author": Object {
              "avatarUrl": "https://avatars2.githubusercontent.com/u/6482205?v=4",
              "name": "Jan Gerhard Schoepp",
            },
            "committedDate": "2018-05-03T18:43:21Z",
            "message": "Merge pull request #2 from jangerhard/cleanup_components

Cleanup components",
            "url": "https://github.com/jangerhard/PersonalGatsbyWebsite/commit/66aea85be45f73383509466e8d48e376da3cb088",
          },
          Object {
            "abbreviatedOid": "63c5423",
            "author": Object {
              "avatarUrl": "https://avatars2.githubusercontent.com/u/6482205?v=4",
              "name": "jangerhard",
            },
            "committedDate": "2018-05-03T18:38:07Z",
            "message": "Use shorthand for components",
            "url": "https://github.com/jangerhard/PersonalGatsbyWebsite/commit/63c5423e955f0b5064d2abe556d75d568d9f849a",
          },
        ]
      }
      name="PersonalGatsbyWebsite"
      url="https://github.com/jangerhard/PersonalGatsbyWebsite"
    />
  </div>
</ReactPlaceholder>
`;

exports[`renders repositories correctly when loading 1`] = `
<ReactPlaceholder
  color="#CDCDCD"
  customPlaceholder={
    <div
      className="repos"
      style={
        Object {
          "width": "30em",
        }
      }
    >
      <TextBlock
        color="grey"
        rows={5}
        widths={
          Array [
            97,
            100,
            94,
            90,
            98,
            95,
            98,
            40,
          ]
        }
      />
    </div>
  }
  delay={0}
  ready={false}
  type="text"
>
  <div
    className="repos"
    style={Object {}}
  >
    <RepositoryComponent
      commits={
        Array [
          Object {
            "abbreviatedOid": "3ce6669",
            "author": Object {
              "avatarUrl": "https://avatars2.githubusercontent.com/u/6482205?v=4",
              "name": "Jan Gerhard Schoepp",
            },
            "committedDate": "2018-05-04T19:59:54Z",
            "message": "Update README.md",
            "url": "https://github.com/jangerhard/react-github-showcase/commit/3ce6669da1f699e254a4aaccd5964863915547a0",
          },
          Object {
            "abbreviatedOid": "0106258",
            "author": Object {
              "avatarUrl": "https://avatars2.githubusercontent.com/u/6482205?v=4",
              "name": "jangerhard",
            },
            "committedDate": "2018-05-04T17:40:37Z",
            "message": "0.0.14",
            "url": "https://github.com/jangerhard/react-github-showcase/commit/01062589e243a9044b04c49f86775937af273fe8",
          },
        ]
      }
      name="react-github-showcase"
      url="https://github.com/jangerhard/react-github-showcase"
    />
    <RepositoryComponent
      commits={
        Array [
          Object {
            "abbreviatedOid": "66aea85",
            "author": Object {
              "avatarUrl": "https://avatars2.githubusercontent.com/u/6482205?v=4",
              "name": "Jan Gerhard Schoepp",
            },
            "committedDate": "2018-05-03T18:43:21Z",
            "message": "Merge pull request #2 from jangerhard/cleanup_components

Cleanup components",
            "url": "https://github.com/jangerhard/PersonalGatsbyWebsite/commit/66aea85be45f73383509466e8d48e376da3cb088",
          },
          Object {
            "abbreviatedOid": "63c5423",
            "author": Object {
              "avatarUrl": "https://avatars2.githubusercontent.com/u/6482205?v=4",
              "name": "jangerhard",
            },
            "committedDate": "2018-05-03T18:38:07Z",
            "message": "Use shorthand for components",
            "url": "https://github.com/jangerhard/PersonalGatsbyWebsite/commit/63c5423e955f0b5064d2abe556d75d568d9f849a",
          },
        ]
      }
      name="PersonalGatsbyWebsite"
      url="https://github.com/jangerhard/PersonalGatsbyWebsite"
    />
  </div>
</ReactPlaceholder>
`;

exports[`renders repositories with no commits  1`] = `
<ReactPlaceholder
  color="#CDCDCD"
  customPlaceholder={
    <div
      className="repos"
      style={
        Object {
          "width": "30em",
        }
      }
    >
      <TextBlock
        color="grey"
        rows={5}
        widths={
          Array [
            97,
            100,
            94,
            90,
            98,
            95,
            98,
            40,
          ]
        }
      />
    </div>
  }
  delay={0}
  ready={true}
  type="text"
>
  <div
    className="repos"
    style={Object {}}
  >
    <RepositoryComponent
      commits={Array []}
      name="react-github-showcase"
      url="https://github.com/jangerhard/react-github-showcase"
    />
    <RepositoryComponent
      commits={Array []}
      name="PersonalGatsbyWebsite"
      url="https://github.com/jangerhard/PersonalGatsbyWebsite"
    />
  </div>
</ReactPlaceholder>
`;
